# dviglo2d_gl

./: readme.md
.github/workflows/: engine.yml  main.yml  minimal_app.yml
engine/cmake/: common.cmake
engine/docs/: building.md
engine/dviglo/main/: os_window.cpp  os_window.hpp
engine/tests/: CMakeLists.txt
games/15_puzzle/: CMakeLists.txt
games/clicker/: CMakeLists.txt
games/klava/: CMakeLists.txt
games/letalka/: CMakeLists.txt
games/survivors/: CMakeLists.txt
minimal_app/: CMakeLists.txt  readme.md
tutorials/physics/: CMakeLists.txt
utils/font_generator/: CMakeLists.txt
utils/sprite_manipulator/: CMakeLists.txt
